UCF-APR2.4/ftr main/force-app/main/default/objects/Group_Member__c/Group_Member__c.object-meta.xml
<CustomObject>
    <label>Group Member</label>
    <nameField>
        <label>Group Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>