UCF-APR2.4/ftr main/force-app/main/default/objects/Group_Member__c/fields/DID_Number_Details__c.field-meta.xml
<CustomField>
    <fullName>DID_Number_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DID Number Details</label>
    <referenceTo>ftr_DID_Number_Details__c</referenceTo>
    <relationshipLabel>Group Members</relationshipLabel>
    <relationshipName>Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>