UCF-APR2.4/ftr main/force-app/main/default/objects/Group_Member__c/fields/Page_Groups__c.field-meta.xml
<CustomField>
    <fullName>Page_Groups__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page Groups</label>
    <referenceTo>Page_Group__c</referenceTo>
    <relationshipLabel>Group Members</relationshipLabel>
    <relationshipName>Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>