UCF-APR2.4/ftr main/force-app/main/default/objects/Group_Member__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <formula>DID_Number_Details__r.Ucf_User_Name__c + &apos; - &apos; +  DID_Number_Details__r.DIDNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserName</label>
    <type>Text</type>
</CustomField>